Fix: remove bug that allows name to spill in application detail page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,6 +212,7 @@ nav {
 
 .personal-details-item {
     padding-bottom: 10px;
+    max-width: 100%;
 }
 
 /*-------------------------------------------------- View profile page styles */
